tests/sksl/errors/golden/BadIndex.glsl
### Compilation failed:

error: 1: expected array, but found 'int'
error: 2: expected array, but found 'float'
2 errors
